# http-server

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  main.c
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.c
include/: http_types.h  logging.h  progargs.h  request.h  response.h  server.h  util.h
src/: CMakeLists.txt  logging.c  progargs.c  request.c  response.c  server.c  util.c
tests/: CMakeLists.txt  test_response.c  test_util.c
tests/unit/: CMakeLists.txt  test_main.c  test_request.c  test_response.c  test_util.c
